--- a/style.css
+++ b/style.css
@@ -2,4 +2,8 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: #c2ebfd;
     text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
